# DragonHorde-Client

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: api_provider.dart  collection.dart  creator.dart  creators.dart  error.dart  item.dart  main.dart  search.dart
lib/dialogs/: create_artist.dart  create_collection.dart
lib/models/: artists_metadata.dart  collection_item_model.dart  collections_metadata.dart  creator_grid_item.dart  grid_item.dart  media_grid_item.dart  media_item.dart  metadata_model.dart  sources_metadata.dart
lib/providers/: creator_list_provider.dart  creator_provider.dart  item_provider.dart  search_provider.dart
lib/util/: value_notifier_list.dart
lib/widgets/: add_metadata.dart  add_widget.dart  auto_complete_search.dart  context_menu.dart  error.dart  grid_item.dart  image.dart  metadata.dart  metadata_search_autocomplete.dart  pageinated_grid.dart  tag_group.dart  thumbnail.dart  thumbnail_grid.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
openapi/: README.md
openapi/.openapi-generator/: FILES
openapi/doc/: AddItem.md  AddQuery.md  ApiCollection.md  ApiCreator.md  ApiMedia.md  CollectionApi.md  CollectionResult.md  CreatorsApi.md  CreatorsResults.md  MediaApi.md  SearchApi.md  SearchResult.md  TagReturn.md  (+1 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust_builder/: pubspec.yaml
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+57 files in other folders)
