[package]
name = "rust_lib_dragonhorde_client_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"

dragonhorde_api_client = {path = "../../dragonhorde_api_client"}
serde = { version = "1.0.219", features = ["derive"] }
url = "2.5.4"
tldextract = "0.6.0"
tokio = { version = "1.44.2", features = ["net", "rt-multi-thread"] }
async-trait = "0.1.88"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde_json = "1.0.140"
reqwest-middleware = "0.4.2"
http-cache-reqwest = "0.15.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
